@@ -37,40 +37,39 @@
   </tr>
   <tr> 
     <td width="46%" class="table_cells"><code>BOOST_WAVE_SUPPORT_WARNING_DIRECTIVE</code></td>
-    <td width="54%" class="table_cells"> <p>Support the #warning directive</p></td>
+    <td width="54%" class="table_cells"> <p>Support the <span class="preprocessor">#warning</span> directive</p></td>
   </tr>
   <tr> 
-    <td width="46%" class="table_cells"><code><code>BOOST_</code>WAVE_SUPPORT_MS_EXTENSIONS</code></td>
+    <td width="46%" class="table_cells"><code>BOOST_WAVE_SUPPORT_MS_EXTENSIONS</code></td>
     <td width="54%" class="table_cells"> <p>Support several MS specific language 
         extensions (i.e. <tt>__int8</tt> et.al.)</p></td>
   </tr>
   <tr> 
-    <td class="table_cells"><code><code>BOOST_</code>WAVE_PREPROCESS_ERROR_MESSAGE_BODY</code></td>
+    <td class="table_cells"><code>BOOST_WAVE_PREPROCESS_ERROR_MESSAGE_BODY</code></td>
     <td class="table_cells"><p>Enable the preprocessing of the message bodies 
-        of <span class="keyword">#error</span> and <span class="keyword">#warning</span> 
+        of <span class="preprocessor">#error</span> and <span class="preprocessor">#warning</span> 
         directives.</p></td>
   </tr>
   <tr> 
-    <td class="table_cells"><code><code>BOOST_</code>WAVE_RETURN_PRAGMA_DIRECTIVES</code></td>
-    <td class="table_cells"><p>If defined, then the <span class="keyword">#pragma</span> 
+    <td class="table_cells"><code>BOOST_WAVE_RETURN_PRAGMA_DIRECTIVES</code></td>
+    <td class="table_cells"><p>If defined, then the <span class="preprocessor">#pragma</span> 
         directives are returned as a token sequence to the caller, if not defined, 
-        the whole <span class="keyword">#pragma</span> directive is skipped. </p></td>
+        the whole <span class="preprocessor">#pragma</span> directive is skipped. </p></td>
   </tr>
   <tr> 
-    <td class="table_cells"><code><code>BOOST_</code>WAVE_PREPROCESS_PRAGMA_BODY</code></td>
-    <td class="table_cells"><p>Enable the preprocessing of the bodies of <span class="keyword"> 
+    <td class="table_cells"><code>BOOST_WAVE_PREPROCESS_PRAGMA_BODY</code></td>
+    <td class="table_cells"><p>Enable the preprocessing of the bodies of all <span class="preprocessor"> 
         #pragma</span> directives.<br>
-        Note though, that the body of an <tt>operator&nbsp;_Pragma()</tt> is preprocessed 
-        always, as required by the C99 Standard <a href="references.html#iso_c">[2]</a>. 
+        Note though, that the body of an <tt>operator&nbsp;_Pragma()</tt> is always preprocessed as this is required by the C99 Standard <a href="references.html#iso_c">[2]</a>. 
       </p></td>
   </tr>
   <tr> 
-    <td class="table_cells"><code><code>BOOST_</code>WAVE_ENABLE_COMMANDLINE_MACROS</code></td>
+    <td class="table_cells"><code>BOOST_WAVE_ENABLE_COMMANDLINE_MACROS</code></td>
     <td class="table_cells"><p>Enable the functionality required to define macros 
         with the command line syntax (-DMACRO(x)=definition)</p></td>
   </tr>
   <tr> 
-    <td class="table_cells"><code><code>BOOST_</code>WAVE_STRINGTYPE</code></td>
+    <td class="table_cells"><code>BOOST_WAVE_STRINGTYPE</code></td>
     <td class="table_cells"><p>The tokens generated by the <tt>Wave</tt> library 
         contain the token data and the file position, where this token was found 
         in the input stream. <br>
@@ -80,24 +79,28 @@
         to the std::string type)</p></td>
   </tr>
   <tr> 
-    <td class="table_cells"><code><code>BOOST_</code>WAVE_SUPPORT_VARIADICS_PLACEMARKERS</code></td>
+    <td class="table_cells"><code>BOOST_WAVE_SUPPORT_VARIADICS_PLACEMARKERS</code></td>
     <td class="table_cells"><p>If defined, then the preprocessor library supports 
         variadics and placemarkers. Note, to support C99 mode, this constant must 
         be defined too.</p></td>
   </tr>
   <tr> 
-    <td class="table_cells"><code><code>BOOST_</code>WAVE_MAX_INCLUDE_LEVEL_DEPTH</code></td>
+    <td class="table_cells"><code>BOOST_WAVE_MAX_INCLUDE_LEVEL_DEPTH</code></td>
     <td class="table_cells"><p>If defined, it will determine the initial maximal 
         possible include file nesting depth supported. It defaults to 1024.</p></td>
   </tr>
   <tr>
-    <td class="table_cells"><code><code>BOOST_</code>WAVE_SUPPORT_PRAGMA_ONCE</code></td>
+    <td class="table_cells"><code>BOOST_WAVE_SUPPORT_PRAGMA_ONCE</code></td>
     <td class="table_cells"><p>If defined, then the <code>#pragma once</code> directive is supported by <tt>Wave</tt>. This specifies that the file, in which the pragma resides, will be included 
-  (opened) only once by the compiler in a build. </p></td>
+      (opened) only once by the compiler in a build. </p></td>
   </tr>
   <tr>
-    <td class="table_cells"><code>BOOST_</code><code>WAVE_SUPPORT_INCLUDE_NEXT</code></td>
-    <td class="table_cells"><p>If defined, then the <code>#include_next</code> directive is supported by <tt>Wave</tt>. This is syntactically equivalent to the <code>#include</code> directives, but may be used to inherit a header file (i.e. to include a file, which is named as the current file containing the <code>#include_next</code>).</p></td>
+    <td class="table_cells"><code>BOOST_WAVE_SUPPORT_PRAGMA_MESSAGE</code></td>
+    <td class="table_cells"><p>If defined, then the <code class="preprocessor">#pragma message(&quot;&quot;)</code> directive is supported by <tt>Wave</tt>. This pragma simply generates a remark cotaining the message text. The body of the #pragma message is preprocessed whenever the <code><code>BOOST_</code>WAVE_PREPROCESS_PRAGMA_BODY</code> constant is defined as well . </p></td>
+  </tr>
+  <tr>
+    <td class="table_cells"><code>BOOST_WAVE_SUPPORT_INCLUDE_NEXT</code></td>
+    <td class="table_cells"><p>If defined, then the <code>#include_next</code> directive is supported by <tt>Wave</tt>. This is syntactically equivalent to the <code class="preprocessor">#include</code> directives, but may be used to inherit a header file (i.e. to include a file, which is named as the current file containing the <code>#include_next</code>).</p></td>
   </tr>
   <tr>
     <td class="table_cells"><code>BOOST_WAVE_USE_STRICT_LEXER</code></td>
@@ -108,8 +111,7 @@
   <tr>
     <td class="table_cells"><code>BOOST_WAVE_PRAGMA_KEYWORD</code></td>
     <td class="table_cells"><p>If this is defined to a string literal it will be used as the pragma keyword recogniyed by the library as specific Wave pragma's. This constant defaults to <span class="literal">&quot;wave&quot;</span>, i.e. the library recognizes all      <span class="preprocessor">#pragma wave option [(argument)]</span>  directives and dispatches the handling to the interpret_pragma() preprocessing hook function (see: <a href="class_reference_ctxpolicy.html">Preprocessing Hooks</a>). The arguments part of the  pragma is optional.<br>
-      </p>
-    </td>
+      </p>    </td>
   </tr>
 </table>
 <P dir="ltr"><b><a name="using_custom_lexer"></a>Using a different token type or lexer type in conjunction with Wave </b></P>
@@ -209,7 +211,7 @@
 <font size="2">Distributed under the Boost Software License, Version 1.0. (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt) </font> </p>
 <span class="updated"></span>
 <p class="copyright"><span class="updated">Last updated: 
-  <!-- #BeginDate format:fcAm1m -->Saturday, February 25, 2006  15:46<!-- #EndDate -->
+  <!-- #BeginDate format:fcAm1m -->Tuesday, May 2, 2006  17:10<!-- #EndDate -->
 </span></p>
 </body>
 </html>
